[package]
name = "dumbbrain-evaluator"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dumbbrain = { path = "../dumbbrain" }
dumbbrain-binder = { path = "../dumbbrain-binder" }
dumbbrain-lexer = { path = "../dumbbrain-lexer" }
dumbbrain-parser = { path = "../dumbbrain-parser" }
