[package]
name = "dumbbrain-repl"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
dumbbrain = { path = "../dumbbrain" }
dumbbrain-lexer = { path = "../dumbbrain-lexer" }
dumbbrain-parser = { path = "../dumbbrain-parser" }
ptree = "0.3.2"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
